[gd_scene load_steps=5 format=3 uid="uid://6pgaxl6wvy6v"]

[ext_resource type="PackedScene" uid="uid://eaia0816n1hc" path="res://ui/elements/points_counter.tscn" id="1_sw15m"]
[ext_resource type="Script" path="res://ui/screens/gameplay_ui.gd" id="1_tqm6y"]
[ext_resource type="Texture2D" uid="uid://c7quwxjqttue5" path="res://images/tokens/coins_small.png" id="2_2mfhs"]
[ext_resource type="PackedScene" uid="uid://cf4lf5wwylon3" path="res://ui/elements/award_points.tscn" id="2_pggwi"]

[node name="gameplay_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_tqm6y")
award_points_scene = ExtResource("2_pggwi")

[node name="PointsCounter" parent="." instance=ExtResource("1_sw15m")]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 70.0

[node name="GoldCounter" parent="." instance=ExtResource("1_sw15m")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
icon_texture = ExtResource("2_2mfhs")

[node name="AlertMessage" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="AlertMessageTimer" type="Timer" parent="."]
